--- a/style.css
+++ b/style.css
@@ -4,12 +4,14 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    overflow-x:hidden;
 }
 .container{
     background-image: url(./images/bg-desktop.svg);
     /* padding:2rem; */
     background-color: hsl(257, 40%, 49%);
     height:100vh;
+    width:100%;
 }
 .main-section{
     /* border: 2px solid red; */
@@ -18,6 +20,7 @@
     /* align-items: center; */
     justify-content:space-evenly;
     color:white;
+    width:100%;
 }
 .content{
     /* border: 2px solid black; */
@@ -71,39 +74,70 @@
     background-color:orangered;
     color:white;
 }
-@media only screen and (max-width:1500px){
-    .container{
-        display:flex;
-        flex-direction: column;
+@media only screen and (min-width: 1290px) and (max-width: 1500px) {
+    html, body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
     }
-    .main-section{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width:100vw;
-        /* border: 2px solid red; */
-        height:100vh;
-    }
-    .social-links{
-        /* border: 2px solid red; */
-        /* margin-bottom: 2rem; */
-        /* text-align: centerd; */
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        /* padding:0.2rem; */
-        margin-right: 220px;
-        /* border:2px solid red; */
-        
 
+    .main-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 375px;
+        /* border: 2px solid red; */
+        height: 100vh;
+        margin: auto;
     }
-    .social-links i{
+    .main-section img{
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 1500px) {
+    html, body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+    }
+
+    .container {
+        display: flex;
+        flex-direction: column;
+        border: 2px solid black;
+        width: 100vw; /* Ensure full width */
+        overflow: hidden;
+    }
+
+    .main-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%; /* Changed from 375px to 100% */
+        height: 100vh;
+    }
+
+    .main-section img {
+        width: 100%;
+    }
+
+    .social-links {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%; /* Changed from 375px to 100% */
+    }
+
+    .social-links i {
         font-size: 15px;
         text-align: center;
-        padding:1rem;
-        text-align: left;
-        /* border: 2px solid red; */
-        /* margin-left: 20px; */
+        padding: 1rem;
     }
 }
